Proof of concept helper binding generation (#22)